src/imp/arcsoft_sys.rs

#[test]
fn bindgen_test_layout_ASF_ActiveFileInfo() {
    assert_eq!(
        ::std::mem::size_of::<ASF_ActiveFileInfo>(),
        64usize,
        concat!("Size of: ", stringify!(ASF_ActiveFileInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_ActiveFileInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_ActiveFileInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).startTime as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(startTime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).endTime as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(endTime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).platform as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(platform)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).sdkType as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(sdkType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).appId as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(appId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).sdkKey as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(sdkKey)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).sdkVersion as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(sdkVersion)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_ActiveFileInfo>())).fileVersion as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_ActiveFileInfo),
            "::",
            stringify!(fileVersion)
        )
    );
}
pub type LPASF_ActiveFileInfo = *mut ASF_ActiveFileInfo;
extern "C" {
    /// 获取激活文件信息接口
    pub fn ASFGetActiveFileInfo(activeFileInfo: LPASF_ActiveFileInfo) -> MRESULT;
}
extern "C" {
    /// 激活接口
    pub fn ASFOnlineActivation(AppId: MPChar, SDKKey: MPChar) -> MRESULT;
}
extern "C" {
    /// 激活接口，该接口与ASFOnlineActivation接口功能一致，推荐使用ASFOnlineActivation接口
    pub fn ASFActivation(AppId: MPChar, SDKKey: MPChar) -> MRESULT;
}
extern "C" {
    /// 初始化引擎
    pub fn ASFInitEngine(
        detectMode: MUInt32,
        detectFaceOrientPriority: ASF_OrientPriority,
        detectFaceScaleVal: MInt32,
        detectFaceMaxNum: MInt32,
        combinedMask: MInt32,
        hEngine: *mut MHandle,
    ) -> MRESULT;
}
extern "C" {
    /// 人脸检测,目前不支持IR图像数据检测
    pub fn ASFDetectFaces(
        hEngine: MHandle,
        width: MInt32,
        height: MInt32,
        format: MInt32,
        imgData: *mut MUInt8,
        detectedFaces: LPASF_MultiFaceInfo,
    ) -> MRESULT;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_LivenessThreshold {
    pub thresholdmodel_BGR: MFloat,
    pub thresholdmodel_IR: MFloat,
}
#[test]
fn bindgen_test_layout_ASF_LivenessThreshold() {
    assert_eq!(
        ::std::mem::size_of::<ASF_LivenessThreshold>(),
        8usize,
        concat!("Size of: ", stringify!(ASF_LivenessThreshold))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_LivenessThreshold>(),
        4usize,
        concat!("Alignment of ", stringify!(ASF_LivenessThreshold))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ASF_LivenessThreshold>())).thresholdmodel_BGR as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_LivenessThreshold),
            "::",
            stringify!(thresholdmodel_BGR)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ASF_LivenessThreshold>())).thresholdmodel_IR as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_LivenessThreshold),
            "::",
            stringify!(thresholdmodel_IR)
        )
    );
}
pub type LPASF_LivenessThreshold = *mut ASF_LivenessThreshold;
extern "C" {
    /// 取值范围[0-1]内部默认数值RGB-0.75，IR-0.7， 用户可以根据实际需求，设置不同的阈值
    pub fn ASFSetLivenessParam(hEngine: MHandle, threshold: LPASF_LivenessThreshold) -> MRESULT;
}
extern "C" {
    /// 年龄/性别/3D角度（该接口仅支持RGB图像），最多支持4张人脸信息检测，超过部分返回未知
    /// RGB活体仅支持单人脸检测
    /// 该接口不支持检测IR活体
    pub fn ASFProcess(
        hEngine: MHandle,
        width: MInt32,
        height: MInt32,
        format: MInt32,
        imgData: *mut MUInt8,
        detectedFaces: LPASF_MultiFaceInfo,
        combinedMask: MInt32,
    ) -> MRESULT;
}
extern "C" {
    /// 该接口目前仅支持单人脸IR活体检测（不支持年龄、性别、3D角度的检测），默认取第一张人脸
    pub fn ASFProcess_IR(
        hEngine: MHandle,
        width: MInt32,
        height: MInt32,
        format: MInt32,
        imgData: *mut MUInt8,
        detectedFaces: LPASF_MultiFaceInfo,
        combinedMask: MInt32,
    ) -> MRESULT;
}
extern "C" {
    /// 销毁引擎
    pub fn ASFUninitEngine(hEngine: MHandle) -> MRESULT;
}
extern "C" {
    /// 获取版本信息
    pub fn ASFGetVersion(hEngine: MHandle) -> *const ASF_VERSION;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_FaceFeature {
    pub feature: *mut MByte,
    pub featureSize: MInt32,
}
#[test]
fn bindgen_test_layout_ASF_FaceFeature() {
    assert_eq!(
        ::std::mem::size_of::<ASF_FaceFeature>(),
        16usize,
        concat!("Size of: ", stringify!(ASF_FaceFeature))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_FaceFeature>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_FaceFeature))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_FaceFeature>())).feature as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_FaceFeature),
            "::",
            stringify!(feature)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_FaceFeature>())).featureSize as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_FaceFeature),
            "::",
            stringify!(featureSize)
        )
    );
}
pub type LPASF_FaceFeature = *mut ASF_FaceFeature;
extern "C" {
    /// 单人脸特征提取
    pub fn ASFFaceFeatureExtract(
        hEngine: MHandle,
        width: MInt32,
        height: MInt32,
        format: MInt32,
        imgData: *mut MUInt8,
        faceInfo: LPASF_SingleFaceInfo,
        feature: LPASF_FaceFeature,
    ) -> MRESULT;
}
extern "C" {
    /// 人脸特征比对
    pub fn ASFFaceFeatureCompare(
        hEngine: MHandle,
        feature1: LPASF_FaceFeature,
        feature2: LPASF_FaceFeature,
        confidenceLevel: *mut MFloat,
    ) -> MRESULT;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_AgeInfo {
    pub ageArray: *mut MInt32,
    pub num: MInt32,
}
#[test]
fn bindgen_test_layout_ASF_AgeInfo() {
    assert_eq!(
        ::std::mem::size_of::<ASF_AgeInfo>(),
        16usize,
        concat!("Size of: ", stringify!(ASF_AgeInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_AgeInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_AgeInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_AgeInfo>())).ageArray as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_AgeInfo),
            "::",
            stringify!(ageArray)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_AgeInfo>())).num as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_AgeInfo),
            "::",
            stringify!(num)
        )
    );
}
pub type LPASF_AgeInfo = *mut ASF_AgeInfo;
extern "C" {
    /// 获取年龄信息
    pub fn ASFGetAge(hEngine: MHandle, ageInfo: LPASF_AgeInfo) -> MRESULT;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_GenderInfo {
    pub genderArray: *mut MInt32,
    pub num: MInt32,
}
#[test]
fn bindgen_test_layout_ASF_GenderInfo() {
    assert_eq!(
        ::std::mem::size_of::<ASF_GenderInfo>(),
        16usize,
        concat!("Size of: ", stringify!(ASF_GenderInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_GenderInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_GenderInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_GenderInfo>())).genderArray as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_GenderInfo),
            "::",
            stringify!(genderArray)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_GenderInfo>())).num as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_GenderInfo),
            "::",
            stringify!(num)
        )
    );
}
pub type LPASF_GenderInfo = *mut ASF_GenderInfo;
extern "C" {
    /// 获取性别信息
    pub fn ASFGetGender(hEngine: MHandle, genderInfo: LPASF_GenderInfo) -> MRESULT;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_Face3DAngle {
    pub roll: *mut MFloat,
    pub yaw: *mut MFloat,
    pub pitch: *mut MFloat,
    pub status: *mut MInt32,
    pub num: MInt32,
}
#[test]
fn bindgen_test_layout_ASF_Face3DAngle() {
    assert_eq!(
        ::std::mem::size_of::<ASF_Face3DAngle>(),
        40usize,
        concat!("Size of: ", stringify!(ASF_Face3DAngle))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_Face3DAngle>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_Face3DAngle))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_Face3DAngle>())).roll as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_Face3DAngle),
            "::",
            stringify!(roll)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_Face3DAngle>())).yaw as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_Face3DAngle),
            "::",
            stringify!(yaw)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_Face3DAngle>())).pitch as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_Face3DAngle),
            "::",
            stringify!(pitch)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_Face3DAngle>())).status as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_Face3DAngle),
            "::",
            stringify!(status)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_Face3DAngle>())).num as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_Face3DAngle),
            "::",
            stringify!(num)
        )
    );
}
